Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2006

.cpp file ends up being highlighted by the generic highlighter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 2.1.0
    • None
    • Editors
    • None
    • f7532a02d080c37a27488a4b5ed28d455063701a

    Description

      I did the following:

      1. File->New File or project
      2. Select General, Text File
      3. Click on "Choose..." button
      4. Provide file name "test.cpp"
      5. Click on "Next"
      6. Click on "Finished"

      Result:
      A .cpp file which is highlighted by the generic highlighter, code completion does not work

      Expected Result:
      The .cpp files is opened in the C++ text editor, highlighting, semantic checking and code completion is available.

      Additional information:
      I should probably just have used the proper wizard to create a C++ source file. I assumed that would add a copyright header and I did not wan that.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            leamelo Leandro T. C. Melo
            hunger Tobias Hunger
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes