src/plugins/resourceeditor/resourcewizard.cpp
@@ -49,7 +49,6 @@ ResourceWizard::generateFilesFromPath(const QString &path,
     const QString fileName = Core::BaseFileWizard::buildFileName(path, name, suffix);
     Core::GeneratedFile file(fileName);
     file.setContents(QLatin1String("<RCC/>"));
-    file.setEditorId(QLatin1String(Constants::RESOURCEEDITOR_ID));
     file.setAttributes(Core::GeneratedFile::OpenEditorAttribute);
     return Core::GeneratedFiles() << file;
 }
