src/plugins/texteditor/texteditorplugin.cpp
@@ -98,7 +98,6 @@ bool TextEditorPlugin::initialize(const QStringList &arguments, QString *errorMe
     wizardParameters.setCategory(QLatin1String("U.General"));
     wizardParameters.setDisplayCategory(tr("General"));
     m_wizard = new TextFileWizard(QLatin1String(TextEditor::Constants::C_TEXTEDITOR_MIMETYPE_TEXT),
-                                  QLatin1String(Core::Constants::K_DEFAULT_TEXT_EDITOR_ID),
                                   QLatin1String("text$"),
                                   wizardParameters);
     // Add text file wizard
